RetailDevGit/src/objects/ARM_Navigation_Item__c.object
<CustomObject>
    <description>Appirio Retail Management (ARM) Object. This object stores all the navigation items related to its parent functions.</description>
    <fields>
        <fullName>Display_Name__c</fullName>
        <inlineHelpText>eg. &quot;HOME&quot;. The name provided here will be the displayed name of navigation item on the site</inlineHelpText>
        <label>Display Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines the state of Navigation Item record</description>
        <inlineHelpText>If unchecked, the navigation item will not reflect in the site</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Set the order of navigation - the navigation items in site will display according to the order defined here</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Page_URL__c</fullName>
        <inlineHelpText>Usually starts with /s/ where &apos;/s/&apos; being the home page. Note that name of pages is case sensitive.
eg. /s/mycases - in this case mycases page should be defined in community (lightning bolt) as a flexipage.</inlineHelpText>
        <label>Page-URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Function__c</fullName>
        <label>Retail Function</label>
        <referenceTo>ARM_Retail_Function__c</referenceTo>
        <relationshipLabel>Navigation Items</relationshipLabel>
        <relationshipName>Navigation_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Navigation Item</label>
    <nameField>
        <displayFormat>NI-{00000}</displayFormat>
        <label>Navigation Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Navigation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>